<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartKey</string>
    <string name="wireless_display">Wireless Display</string>
    <string name="E_Share">E-Share</string>
    <string name="enjoy_music">Enjoy Music</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="world_clock">World Clock</string>
    <string name="soundbar_ready">SoundBar Ready</string>
    <string name="fast_cast">FastCast</string>
    <string name="night_mode">Night Mode</string>
    <string name="second">S</string>
    <string name="singleListener_tip">Press any key except volume key to exit!</string>
    <string name="singleListener_enter">Enter Music</string>
    <string name="weather">Weather</string>
    <string name="turn_off">Close</string>
    <string name="time_off">Close</string>
    <string name="time_10">10 min</string>
    <string name="time_20">20 min</string>
    <string name="time_30">30 min</string>
    <string name="time_60">60 min</string>
    <string name="time_90">90 min</string>
    <string name="time_120">120 min</string>
    <string name="time_180">180 min</string>
    <string name="standard">Standard</string>
    <string name="music">Music</string>
    <string name="movie">Movie</string>

    <string name="night_mode_failed">Open night mode failed.</string>
</resources>